# torq-lang

./: .gitignore  CLAUDE.md  LICENSE  README.md
compiler/: Cargo.toml
compiler/crates/torqc-ai/: Cargo.toml
compiler/crates/torqc-ai/src/: config.rs  fixer.rs  lib.rs  provider.rs  tests.rs
compiler/crates/torqc-ast/: Cargo.toml
compiler/crates/torqc-ast/src/: ast.rs  lib.rs
compiler/crates/torqc-cli/: Cargo.toml
compiler/crates/torqc-cli/src/: main.rs
compiler/crates/torqc-codegen/: Cargo.toml
compiler/crates/torqc-codegen/runtime/: torq_runtime.c
compiler/crates/torqc-codegen/src/: codegen.rs  lib.rs  linker.rs  runtime.rs
compiler/crates/torqc-codegen/tests/: codegen_tests.rs
compiler/crates/torqc-lexer/: Cargo.toml
compiler/crates/torqc-lexer/src/: lexer.rs  token.rs
compiler/crates/torqc-lexer/tests/: lexer_tests.rs
compiler/crates/torqc-parser/: Cargo.toml
compiler/crates/torqc-parser/src/: parser.rs
compiler/crates/torqc-parser/tests/: parser_tests.rs
compiler/crates/torqc-semantic/: Cargo.toml
compiler/crates/torqc-semantic/src/: analyzer.rs  diagnostic.rs  lib.rs  registry.rs
docs/: TORQ-AI-PROMPT.md  TORQ-LANGUAGE-SPEC.md
docs/plans/: 2026-02-20-compiler-design.md  2026-02-20-phase1-lexer-parser.md  2026-02-20-phase2-semantic-analysis.md  2026-02-20-phase3-basic-codegen.md  2026-02-20-phase4-control-flow.md  2026-02-20-phase5-runtime-stdlib.md  PROGRESS.md
examples/: checkout_service.torq  cli_tool.torq  data_processing.torq  fibonacci.torq  hello.torq  test_fail.torq  test_math.torq  torq.yaml  web_server.torq
(+6 files in other folders)
