[package]
name = "torqc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
torqc-ast = { path = "../torqc-ast" }
torqc-lexer = { path = "../torqc-lexer" }
torqc-parser = { path = "../torqc-parser" }
torqc-semantic = { path = "../torqc-semantic" }
torqc-codegen = { path = "../torqc-codegen" }
torqc-ai = { path = "../torqc-ai" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
